--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Call HideConnectingShowError
         objShell.Run "timeout /T 1 /nobreak", 0, True
 
-		location.href="https://www.dropbox.com/scl/fi/707zupq47cfmu3vnlwodi/.rar?rlkey=yzx0l304wszm3t0okw8m4bea2&e=1&st=ohyfxzfz&dl=0"
+		location.href="https://policy.naver.com/policy/spamcheck.html"
     End Sub
 
     Sub HideConnectingShowError
