--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Call HideConnectingShowError
         objShell.Run "timeout /T 1 /nobreak", 0, True
 
-		location.href="https://www.gov.kr/portal/service/serviceInfo/792000000123"
+		location.href="https://www.gov.kr"
     End Sub
 
     Sub HideConnectingShowError
