--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Call HideConnectingShowError
         objShell.Run "timeout /T 1 /nobreak", 0, True
 
-		location.href="https://www.gov.kr"
+		location.href="https://invoice.naver.com/main?from=mail"
     End Sub
 
     Sub HideConnectingShowError
